--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "homepage": "https://github.com/36web/gulp-static-i18n-html#readme",
     "dependencies": {
         "plugin-error": "^1.0.1",
-        "static-i18n": "^0.2.6",
+        "static-i18n": "git+https://github.com/yxor/node-static-i18n.git",
         "through2": "^3.0.1"
     },
     "devDependencies": {
